--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button id="search-btn">Найти</button>
             </div>
         </div>
-        <div class="title-desctiption">
+        <div class="title-description">
             <h1>Информация о погоде:</h1>
         </div>
         <div class="weather">
